# Advanced-Tic-Tac-Toe-Game-

./: CMakeLists.txt  ai_logic.h  main.cpp
.github/workflows/: ci.yml  mm.yml
data/: history.txt  score.txt  users.txt
include/: UserManager.h  ai_logic.h  score.txt
src/: User.cpp  UserManager.cpp  ai_logic.cpp  game_logic.cpp  game_ui.cpp  leaderboard.cpp  main.cpp
tests/: ai_test.cpp
